Setting up initial process timeline

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-s3fs==0.4.0
-pyarrow==0.13.0
+s3fs
+pyarrow
 awscli
 jupyter
 jupyterlab
@@ -7,6 +7,10 @@ geolib
 haversine
 plotly
 nodejs
-dask==2.9.2
-distributed==2.9.3
-bokeh==1.4.0
+pandas
+matplotlib
+numpy
+dask
+distributed
+bokeh
+dvc
